# python-podman-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json.template
scripts/: bootstrap.ps1  bootstrap.sh
src/: app.py
tests/: test_app.py
