[tool.poetry]
name = "python-podman-template"
version = "0.1.0"
description = "Minimal Podman-based Python template"
authors = ["bsr-the-mngrm <me@sandorbakos.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"